--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,34 @@
 
 	<groupId>com.meng</groupId>
 	<artifactId>admin-meng</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>admin-meng</name>
 	<packaging>pom</packaging>
 	<description>Demo project for Spring Boot</description>
 
+	<properties>
+		<admin.meng.version>1.0.0-SNAPSHOT</admin.meng.version>
+	</properties>
 
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.spring.platform</groupId>
+				<artifactId>platform-bom</artifactId>
+				<version>Brussels-SR4</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Dalston.SR2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -51,5 +73,11 @@
 			</plugin>
 		</plugins>
 	</build>
+	<modules>
+		<module>../admin-meng-app</module>
+		<module>../admin-meng-pc</module>
+		<module>../admin-meng-core</module>
+		<module>../admin-meng-demo</module>
+	</modules>
 
 </project>
