--- a/admin-meng-core/pom.xml
+++ b/admin-meng-core/pom.xml
@@ -2,18 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>admin-meng</groupId>
-        <artifactId>admin-meng</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../admin-meng</relativePath>
-    </parent>
+
 
     <groupId>com.example</groupId>
     <artifactId>admin-meng-core</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>admin-meng-core</name>
     <description>Demo project for Spring Boot</description>
+
+    <parent>
+        <groupId>com.meng</groupId>
+        <artifactId>admin-meng</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>pom.xml</relativePath>
+    </parent>
 
     <properties>
         <java.version>1.8</java.version>
