--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,17 @@
 	<packaging>pom</packaging>
 	<description>Demo project for Spring Boot</description>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.1.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+
 	<properties>
+		<java.version>1.8</java.version>
 		<admin.meng.version>1.0.0-SNAPSHOT</admin.meng.version>
 	</properties>
-
 
 	<dependencyManagement>
 		<dependencies>
@@ -33,18 +40,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-
-
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -74,10 +69,10 @@
 		</plugins>
 	</build>
 	<modules>
-		<module>../admin-meng-app</module>
-		<module>../admin-meng-pc</module>
-		<module>../admin-meng-core</module>
-		<module>../admin-meng-demo</module>
+		<module>admin-meng-app</module>
+		<module>admin-meng-pc</module>
+		<module>admin-meng-core</module>
+		<module>admin-meng-demo</module>
 	</modules>
 
 </project>
