--- a/admin-meng-pc/pom.xml
+++ b/admin-meng-pc/pom.xml
@@ -18,7 +18,7 @@
         <groupId>com.meng</groupId>
         <artifactId>admin-meng</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <properties>
         <java.version>1.8</java.version>
