--- a/admin-meng-pc/src/main/resources/application.properties
+++ b/admin-meng-pc/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8082
+server.servlet.context-path=/admin-meng-pc
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://139.224.54.106:3306/mengye?useUnicode=true&characterEncoding=utf-8&relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=Meng960319
 
