--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
 		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;
 	</parent>-->
 
+	<modules>
+		<module>admin-meng-app</module>
+		<module>admin-meng-pc</module>
+		<module>admin-meng-core</module>
+		<module>admin-meng-demo</module>
+	</modules>
+
 	<properties>
 		<java.version>1.8</java.version>
 		<admin.meng.version>1.0.0-SNAPSHOT</admin.meng.version>
@@ -39,12 +46,6 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter</artifactId>
-				<version>2.2.1.RELEASE</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
 				<scope>test</scope>
 				<exclusions>
@@ -59,17 +60,19 @@
 
 	<build>
 		<plugins>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+			</plugin>-->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
-	<modules>
-		<module>admin-meng-app</module>
-		<module>admin-meng-pc</module>
-		<module>admin-meng-core</module>
-		<module>admin-meng-demo</module>
-	</modules>
-
 </project>
