# 3.1-3.5 测试用例 @jsonView使用

--- a/admin-meng-demo/pom.xml
+++ b/admin-meng-demo/pom.xml
@@ -25,7 +25,12 @@
         <dependency>
             <groupId>com.meng.pc</groupId>
             <artifactId>admin-meng-pc</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${admin.meng.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
 
