--- a/admin-meng-app/pom.xml
+++ b/admin-meng-app/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.meng.core</groupId>
             <artifactId>admin-meng-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${admin.meng.version}</version>
         </dependency>
     </dependencies>
 
