--- a/admin-meng-core/pom.xml
+++ b/admin-meng-core/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-core</artifactId>
+            <artifactId>spring-social-config</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
@@ -48,7 +48,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-security</artifactId>
+            <artifactId>spring-social-web</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
@@ -62,6 +62,10 @@
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
