--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/admin-meng?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.data-username=root
+spring.datasource.data-password=123456
 
+spring.session.store-type=none
+server.port=8084
