--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/admin-meng?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
-spring.datasource.data-username=root
-spring.datasource.data-password=123456
+spring.datasource.username=root
+spring.datasource.password=123456
 
 spring.session.store-type=none
+security.basic.enabled=false
 server.port=8084
+
+#spring.redis.host=139.224.54.106
+#spring.redis.password=mengye
