--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.session.store-type=none
-security.basic.enabled=false
+#security.basic.enabled=false
 server.port=8084
 
 #spring.redis.host=139.224.54.106
