# 4.5 个性化认证流程2 登陆成功配置返回json还是自定义跳转

--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -10,4 +10,6 @@ server.port=8084
 #spring.redis.host=139.224.54.106
 #spring.redis.password=mengye
 
-admin.meng.pc.loginPage=/demo-signIn.html
+#admin.meng.pc.loginPage=/demo-signIn.html
+#登陆成功方式为跳转链接
+admin.meng.pc.loginType=REDIRECT
