--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -11,5 +11,5 @@ server.port=8084
 #spring.redis.password=mengye
 
 #admin.meng.pc.loginPage=/demo-signIn.html
-#登陆成功方式为跳转链接
-admin.meng.pc.loginType=REDIRECT
+# 自定义登陆成功方式为跳转
+#admin.meng.pc.loginType=REDIRECT
