--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -2,14 +2,15 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/admin-meng?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
-
 spring.session.store-type=none
 #security.basic.enabled=false
 server.port=8084
-
 #spring.redis.host=139.224.54.106
 #spring.redis.password=mengye
-
 #admin.meng.pc.loginPage=/demo-signIn.html
 # 自定义登陆成功方式为跳转
 #admin.meng.pc.loginType=REDIRECT
+# 图形验证码 code 的位数
+admin.meng.code.imageCode.length=6
+admin.meng.code.imageCode.width=200
+admin.meng.code.imageCode.url=/user,/user/**
