# 4-9 页面添加记住我的功能

--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -11,6 +11,6 @@ server.port=8084
 # 自定义登陆成功方式为跳转
 #admin.meng.pc.loginType=REDIRECT
 # 图形验证码 code 的位数
-admin.meng.code.imageCode.length=6
-admin.meng.code.imageCode.width=200
-admin.meng.code.imageCode.url=/user,/user/**
+#admin.meng.code.imageCode.length=6
+#admin.meng.code.imageCode.width=200
+#admin.meng.code.imageCode.url=/user,/user/**
