--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -14,3 +14,7 @@ server.port=8084
 #admin.meng.code.imageCode.length=6
 #admin.meng.code.imageCode.width=200
 #admin.meng.code.imageCode.url=/user,/user/**
+
+# qq登录的开发者appId 和 appSecret
+admin.meng.social.qq.app-id = test
+admin.meng.social.qq.app-secret = test
