# 5-4 开发QQ登录(中)>项目启动报错解决

--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -14,7 +14,6 @@ server.port=8084
 #admin.meng.code.imageCode.length=6
 #admin.meng.code.imageCode.width=200
 #admin.meng.code.imageCode.url=/user,/user/**
-
 # qq登录的开发者appId 和 appSecret
-admin.meng.social.qq.app-id = test
-admin.meng.social.qq.app-secret = test
+admin.meng.social.qq.app-id=101809886
+admin.meng.social.qq.app-secret=9070242ba9e268625e598483cccee886
