# 5-4 开发QQ登录(下) 及 遇到问题修复

--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.session.store-type=none
 #security.basic.enabled=false
-server.port=8084
+server.port=8080
 #spring.redis.host=139.224.54.106
 #spring.redis.password=mengye
 #admin.meng.pc.loginPage=/demo-signIn.html
@@ -17,3 +17,7 @@ server.port=8084
 # qq登录的开发者appId 和 appSecret
 admin.meng.social.qq.app-id=101809886
 admin.meng.social.qq.app-secret=9070242ba9e268625e598483cccee886
+# 访问的路径
+admin.meng.social.filterProcessUrl=/bookshop
+# 之前配置成 /login 导致访问不了
+admin.meng.social.qq.providerId=login
