# 5-6 处理QQ注册逻辑

--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -7,13 +7,11 @@ spring.session.store-type=none
 server.port=8080
 #spring.redis.host=139.224.54.106
 #spring.redis.password=mengye
+
+# 使用自己定义的1.登录页面 2.注册页面
 #admin.meng.pc.loginPage=/demo-signIn.html
-# 自定义登陆成功方式为跳转
-#admin.meng.pc.loginType=REDIRECT
-# 图形验证码 code 的位数
-#admin.meng.code.imageCode.length=6
-#admin.meng.code.imageCode.width=200
-#admin.meng.code.imageCode.url=/user,/user/**
+admin.meng.pc.singUpUrl=/demo-signUp.html
+
 # qq登录的开发者appId 和 appSecret
 admin.meng.social.qq.app-id=101809886
 admin.meng.social.qq.app-secret=9070242ba9e268625e598483cccee886
@@ -21,3 +19,14 @@ admin.meng.social.qq.app-secret=9070242ba9e268625e598483cccee886
 admin.meng.social.filterProcessUrl=/bookshop
 # 之前配置成 /login 导致访问不了
 admin.meng.social.qq.providerId=login
+
+
+
+# 自定义登陆成功方式为跳转 默认返回JSON
+#admin.meng.pc.loginType=REDIRECT
+
+# 图形验证码 code 的位数、宽度
+#admin.meng.code.imageCode.length=6
+#admin.meng.code.imageCode.width=200
+# 需要图片验证码的路径
+#admin.meng.code.imageCode.url=/user,/user/**
