--- a/admin-meng-demo/src/main/resources/application.properties
+++ b/admin-meng-demo/src/main/resources/application.properties
@@ -21,6 +21,8 @@ admin.meng.social.filterProcessUrl=/bookshop
 admin.meng.social.qq.providerId=login
 
 
+#session的超时时间 单位:秒 默认:30mins 最少1分钟
+server.session.timeout= 600
 
 # 自定义登陆成功方式为跳转 默认返回JSON
 #admin.meng.pc.loginType=REDIRECT
